# shopBackaryAPI

./: .env.example  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  usefulapi.py
